--- a/css/normalize.css
+++ b/css/normalize.css
@@ -11,7 +11,8 @@
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
-  height: 100%;
+  max-height: 100%;
+  max-width: 100%;
 
 }
 
@@ -22,9 +23,17 @@ html {
  * Remove the margin in all browsers.
  */
 
+ html {
+   max-height:100%;
+   max-width: 100%;
+ }
+
 body {
-  margin: 0;
-  height: 100%;
+  margin: 0 auto;
+    height: 100vh;
+    max-width: 100%;
+    padding: 0;
+
 
 }
 
