--- a/css/main.css
+++ b/css/main.css
@@ -327,6 +327,17 @@ textarea {
   position: relative;
 }
 
+.hero-image2 {
+  background-image: url("../img/install2.jpg");
+  /* Set a specific height */
+  height: 50%;
+  height: 600px;
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
 /* Place text in the middle of the image */
 .hero-text {
   text-align: center;
@@ -401,6 +412,7 @@ img {
   max-width: 1000px;
   position: relative;
   margin: auto;
+  border: none;
 }
 
 /* Hide the images by default */
@@ -416,11 +428,11 @@ img {
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: white;
+  color: black;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
+  /* border-radius: 0 3px 3px 0; */
   user-select: none;
 }
 
@@ -566,9 +578,31 @@ div#menu {
            background-color: green;
            width: 500px;
            height: 110px; */
-           /* overflow: auto;
-           text-align:justify; */
+           overflow: auto;
+           text-align:justify;
 }
+
+/* div#menu  .shadows  {
+    bottom:0;
+    left:0;
+    pointer-events:none;
+    position:absolute;
+    right:0;
+    top:0;
+    transition:all .2s ease-out;
+  }
+  &.off-bottom {
+    .shadows {
+      box-shadow:0 -3em 3em -1em white inset;
+    }
+  }
+} */
+
+
+.text-box-shadow {
+  box-shadow: inset 0 -50px 50px -50px rgba(0, 0, 0, 2);
+}
+
 #menu h2 {
   font-size: 16px;
 }
@@ -618,6 +652,9 @@ margin: 0 auto;
   /* padding: 0; */
 }
 
+/* header.grid-containerNav {
+  max-height: 20%;
+} */
 
 /* .header { grid-area: header; } */
 .menu { grid-area: menu; }
@@ -635,7 +672,7 @@ div.grid-containerDT {
   /* background-color: #2196F3; */
   /* padding: 10px; */
   margin: 0 auto;
-  max-height: 100%;
+  /* max-height: 80%; */
   /* overflow: hidden; */
   /* padding: 0; */
 }
@@ -666,6 +703,28 @@ div.grid-container2 {
   'QV3'
   'transform'
   'save'
+}
+
+/* Work Grid  */
+.gridWork1 { grid-area: spacer; }
+.gridWork2 { grid-area: log; }
+.gridWork3 { grid-area: spacerb; }
+/* .item4 { grid-area: right; }
+.item5 { grid-area: footer; } */
+
+.grid-containerWORK {
+  display: grid;
+  grid-template-areas:
+    /* 'header header header header header header' */
+    /* 'a a a a a' */
+    /* 'spacer spacer spacer spacer spacer' */
+    'spacer spacer spacer log spacerb'
+    /* 'menu footer footer footer footer footer'; */
+  /* grid-gap: 10px; */
+  /* background-color: #2196F3; */
+  /* padding: 10px; */
+  /* margin: 0 auto; */
+  /* padding: 0; */
 }
 
 /*  Home Grid */
@@ -787,3 +846,8 @@ div#save.menudiv7 button.Button:hover {
   background-color: #fef9f3;
   color: white;
 } */
+
+main#main {
+  max-width: 960px;
+  width: 100%;
+}
