--- a/css/main.css
+++ b/css/main.css
@@ -12,13 +12,15 @@
    ========================================================================== */
 
 html {
-  color: #222;
-  font-size: 1em;
-  line-height: 1.4;
+  color: #000;
+  font-size: 1.2em;
+  line-height: 1.6;
+  /* font-family: 'Bebas Neue', cursive; */
   font-family: 'Raleway', sans-serif;
   max-height: 100%;
   height: 100vh;
 }
+
 
 /*
  * Remove text-shadow in selection highlight:
@@ -316,7 +318,7 @@ textarea {
 
 /* The hero image */
 .hero-image {
-  background-image: url("../img/INSTALL.jpg");
+  background-image: url("../img/ExhibitPerspective.jpg");
   /* Set a specific height */
   height: 50%;
   height: 600px;
@@ -328,7 +330,7 @@ textarea {
 }
 
 .hero-image2 {
-  background-image: url("../img/install2.jpg");
+  background-image: url("../img/ExhibitCenter.jpg");
   /* Set a specific height */
   height: 50%;
   height: 600px;
@@ -342,10 +344,23 @@ textarea {
 .hero-text {
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 90%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: white;
+  color: #ffff01;
+  border: none;
+  width: 100%;
+  /* font-size: 2em; */
+}
+
+div.exhibitdate {
+  /* color: #ffff01; */
+  border: none;
+  border: 5px solid #ffff01;
+  /* border-bottom: 3px solid #ffff01; */
+  margin-top: 0px;
+  /* background-color: rgba(255, 255, 1, 0.03); */
+
 }
 
 main {
@@ -429,6 +444,7 @@ img {
   margin-top: -22px;
   padding: 16px;
   color: black;
+  background-color: #ffff01;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -449,13 +465,23 @@ img {
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
+  /* color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
-  width: 100%;
-  text-align: center;
+  /* width: 100%; */
+  /* text-align: center; */ */
+}
+
+div.text {
+  float: right;
+  max-width: 50%;
+  text-align: left;
+  margin: 0 auto;
+  padding-top: 100px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 /* Number text (1/3 etc) */
@@ -503,14 +529,25 @@ Fading animation */
 
 div.mySlides.fade.center {
   border: none;
+  padding-left: 3%;
+  padding-right: 3%;
+  margin: 0 auto;
 }
 div.mySlides.fade.center img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  max-width: 100%;
+  max-height: 450px;
+  /* float: left; */
+  max-height: 100%;
 }
 
+div.slideimgdiv{
+  max-width: 50%;
+  float: left;
+  border: none;
+}
 div.mySlides.fade.center div.text {
   color: black;
 }
@@ -619,6 +656,7 @@ div#main.main {
   /* position: relative; */
   /* background-color: black; */
 }
+
 #canvas {
 max-width:100%;
 margin: 0 auto;
@@ -830,8 +868,8 @@ div#save.menudiv7 button.Button {
   background-color: #ffff01;
   color: black;
   border: none;
-  /* padding: 0px; */
-  /* margin: 0 auto; */
+  padding: 0px;
+  /* margin: 0 auto;
 }
 
 div#save.menudiv7 button.Button:hover {
@@ -847,7 +885,45 @@ div#save.menudiv7 button.Button:hover {
   color: white;
 } */
 
+/* header {
+  font-family: 'Bebas Neue', cursive;
+} */
 main#main {
   max-width: 960px;
   width: 100%;
+  font-weight: 200;
+}
+
+section#summary h1 {
+  text-align: center;
+}
+
+section#summary h2 {
+  text-align: center;
+}
+section#summary p {
+  padding-top: 20px;
+  /* text-align: center; */
+}
+
+section#summary {
+  margin-top: 0px;
+  /* padding-top: 0px; */
+}
+
+footer {
+  /* clear: both; */
+   /* display: block; */
+  /* position: absolute; */
+  margin: 0 auto;
+   /* left: 0; */
+  /* bottom: 0; */
+  width: 100%;
+  /* background-color: #161616; */
+  /* color: white; */
+  font-size: .8em;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  /* text-align: center; */
 }
